# DevSecOps_Security_Automation_Platform

./: .gitignore  FILE_STRUCTURE_EXPLAINED.zh-CN.md  LICENSE  Makefile  README.md  README.zh-CN.md  findings_db.json  policy.yml  pyproject.toml
.github/workflows/: security-scan.yml
DevSecOps Security Automation Platform/: README.zh-CN.md  findings_db.json
DevSecOps Security Automation Platform/artifacts/: findings.filtered.json  sast.json  secrets.json  summary.json
DevSecOps Security Automation Platform/secscan/: cli.py  scanners.py
DevSecOps Security Automation Platform/secscan/governance/: sync.py
DevSecOps Security Automation Platform/secscan/reporting/: html.py
DevSecOps Security Automation Platform/secscan/rules/: __init__.py  command_injection.py  common.py  ssrf.py  xss.py
DevSecOps Security Automation Platform/tests/: test_rules.py  test_sarif.py
artifacts/: findings.json  report.html  sast.sarif  secrets.sarif
demo_app/: app.py
secscan/: agent.py  cli.py  models.py  scanners.py  utils.py
secscan/governance/: __init__.py
secscan/reporting/: sarif.py
secscan/rules/: insecure_deserialization.py  secrets.py  sql_injection.py
secscan/rules/semgrep/: sast.yml
tests/: test_agent.py  test_sarif.py
